syntax = "proto3";

option go_package = "protos/bootcamp_service";

package protos.bootcamp_service;

service BootcampService {
	rpc GetBootcampsDetails(GetBootcampsDetailsRequest) returns (GetBootcampsDetailsResponse);
	rpc CreateBootcamp(CreateBootcampRequest) returns (CreateBootcampResponse);
}

message GetBootcampsDetailsRequest {
	repeated string bootcamp_ids = 1;
}

message CreateBootcampRequest {
	string title = 1;
	string description = 2;
	string website = 3;
	string phone = 4;
	string email = 5;
	repeated string careers = 6;
	string address = 7;
}

message GetBootcampsDetailsResponse {
	message Data {
		BootcampInfo bootcamp = 1;
		CourseInfo course = 2;
		repeated Review reviews = 3;
	}

	repeated Data data = 1;
}

message CreateBootcampResponse {
	bool success = 1;
	BootcampInfo data = 2;
}

message BootcampInfo {
	string bootcamp_id = 1;
	string title = 2;
	string description = 3;
	string website = 4;
	string email = 5;
	string name_slug = 6;
	repeated string careers = 7;
}

message CourseInfo {
	string course_id = 1;
	string title = 2;
	string description = 3;
}

message Review {
	string review_id = 1;
	string user_id = 2;
	string title = 3;
	string message = 4;
	int32 rating = 5;
}